--- a/package.json
+++ b/package.json
@@ -9,27 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@apollo/client": "^3.7.2",
+    "@types/node": "^18.11.12",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.9",
     "apollo-upload-client": "^17.0.0",
     "async-wait-until": "^2.0.12",
-    "axios": "^1.1.3",
+    "axios": "^1.2.1",
     "blob-util": "^2.0.2",
-    "eslint": "8.27.0",
-    "eslint-config-next": "^13.0.5",
+    "eslint": "8.29.0",
+    "eslint-config-next": "^13.0.6",
+    "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "graphql": "^16.6.0",
-    "next": "^13.0.5",
+    "next": "^13.0.6",
     "p-wait-for": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.3"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^17.0.2",
+    "@types/file-saver": "^2.0.5",
     "@types/styled-components": "^5.1.26"
   }
 }
