--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/file-saver": "^2.0.5",
     "@types/styled-components": "^5.1.26"
