--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.2",
+    "@bradgarropy/next-google-analytics": "^1.0.2",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.9",
