--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.2",
     "@bradgarropy/next-google-analytics": "^1.0.2",
+    "@img-comparison-slider/react": "^7.8.0",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.9",
@@ -27,10 +28,8 @@
     "p-wait-for": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
     "styled-components": "^5.3.6",
+    "svg-parser": "^2.0.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
